# DCG-DemoApp

./: DCG_Client.py  DCG_Server.py  LICENSE  README.md  app.py  environment.yml  pyproject.toml  server.py
